--- a/pagina1.html
+++ b/pagina1.html
@@ -5,5 +5,7 @@
   <h1>Estas en la otra página</h1>
   <p>Estoy usando GitHub como hosting para mi web</p>
   <a href="index.html">volver</a>
+    </br>
+    img src="descarga.png">
   </body>
 </html>
