--- a/pagina1.html
+++ b/pagina1.html
@@ -6,6 +6,6 @@
   <p>Estoy usando GitHub como hosting para mi web</p>
   <a href="index.html">volver</a>
     </br>
-    img src="descarga.png">
+    <img src="descarga.png">
   </body>
 </html>
