--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
   <body>
   <h1>ESTA ES MI WEB</h1>
   <a href="pagina1.html">Visita mi otra página</a>
+    
+    <br/>
+    <a href="lista.html">Enlace a la lista</a>
   </body>
  </html>
